<resources>
    <string name="app_name">dps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Common -->
    <string name="description_toolbar_main_logo">툴바 메인 로고 이미지</string>
    <string name="description_toolbar_main_search_icon">툴바에 위치한 검색 아이콘</string>
    <string name="format_item_name">%1$s | %2$s</string>
    <string name="format_item_description">%1$s, %2$s세</string>

    <!--  Dialog -->
    <string name="description_add_pet_profile">추가할 반려동물의 프로필 이미지</string>
    <string name="description_close_dialog">다이얼로그 닫기 아이콘 이미지</string>
    <string name="label_add_contact">연락처 추가</string>
    <string name="btn_label_add_contact">추가</string>
    <string name="hint_owner_name">ex) 홍길동</string>
    <string name="label_pet_profile_image">반려동물 프로필</string>
    <string name="label_owner_name">주인 이름</string>
    <string name="label_owner_gender">주인 성별</string>
    <string name="label_gender_male">남</string>
    <string name="label_gender_female">여</string>
    <string name="label_phone_number">전화번호</string>
    <string name="hint_phone_number">\'-\' 없이 입력하세요</string>
    <string name="label_owner_age">주인 나이</string>
    <string name="hint_owner_age">20</string>
    <string name="label_region">사는 지역</string>
    <string name="hint_region_city">시</string>
    <string name="hint_region_county">군/구</string>
    <string name="label_pet_name">반려동물 이름</string>
    <string name="label_pet_gender">반려동물 성별</string>
    <string name="hint_pet_name">ex) 코코</string>
    <string name="label_pet_species">종</string>
    <string name="hint_pet_species">종</string>
    <string name="label_pet_age">반려동물 나이</string>
    <string name="description_dialog_fold_icon">Number Picker를 띄우라고 알려주는 아이콘</string>
    <string name="label_memo">메모</string>
    <string name="hint_memo">50자 이내로 입력해주세요</string>
    <string name="label_personality">성격</string>
    <string name="hint_pet_age">5</string>
    <string name="hint_personality">추가할 성격을 입력해주세요</string>
    <string name="btn_label_cancel">취소</string>
    <string name="btn_label_confirm">확인</string>
    <string name="btn_label_add">추가</string>

    <!--  Search -->
    <string name="description_back">뒤로 가기 아이콘</string>
    <string name="hint_search">전화번호, 이름 검색</string>


    <!-- detailActivity -->
    <string name="detail_info_title">정보</string>
    <string name="detail_edit_btn">edit</string>
    <string name="detail_memory_title">추억</string>
    <string name="detail_favorite_btn">favorite</string>
    <string name="detail_notification_btn">notification</string>
    <string name="dialog_hint">내용을 적어주세요</string>

</resources>