<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/iv_toolbar_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_close_dialog"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toolbar_title_dialog"
        style="@style/AppTextTitle.S18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_add_contact"
        app:layout_constraintBottom_toBottomOf="@id/iv_toolbar_close_dialog"
        app:layout_constraintEnd_toStartOf="@+id/tv_toolbar_action"
        app:layout_constraintStart_toEndOf="@id/iv_toolbar_close_dialog"
        app:layout_constraintTop_toTopOf="@id/iv_toolbar_close_dialog" />

    <TextView
        android:id="@+id/tv_toolbar_action"
        style="@style/AppTextTitle.S16.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_add_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>