<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shp_bottom_sheet"
    android:paddingHorizontal="20dp"
    android:paddingBottom="40dp">

    <EditText
        android:id="@+id/et_input_personality"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:hint="@string/hint_personality"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/ll_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_personality">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_personality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="textMultiLine"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="0dp">

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_personality_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shp_button_disable"
        android:text="@string/btn_label_cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_personality_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_chip_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_personality_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/shp_button_enabled"
        android:text="@string/btn_label_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_personality_close"
        app:layout_constraintTop_toTopOf="@id/btn_personality_close" />

</androidx.constraintlayout.widget.ConstraintLayout>